--- a/6th Draft/standard.bib
+++ b/6th Draft/standard.bib
@@ -121,15 +121,12 @@
 }
 
 @article{Mahendran2011,
-	author = {Mahendran, S and Baboo, S Santhosh},
-	number = {1},
+	author = {Mahendran, S K and Baboo, S Santhosh},
+	number = {6},
 	pages = {340-345},
 	title = {Automatic Fracture Detection Using Classifiers- A Review},
-	journal = {IJCSI International Journal of Computer Science},
-	publisher={Citeseer},
 	volume = {8},
-	year = {2011},
-	month = nov
+	year = {2011}
 }
 
 @article{Jolliffe2016,
@@ -289,24 +286,22 @@
 }
 
 @article{Mahendran2012,
-  	title={Ensemble Systems for Automatic Fracture Detection},
-  	author={Mahendran, SK and Baboo, S Santhosh},
-  	journal={International Journal of Engineering and Technology},
-  	volume={4},
- 	 number={1},
- 	 pages={7},
-  	year={2012},
- 	 publisher={IACSIT Press}
+	author = {Mahendran, S K and Baboo, S Santhosh},
+	number = {1},
+	pages = {1-4},
+	title = {Ensemble Systems for Automatic Fracture Detection},
+	volume = {4},
+	year = {2012}
 }
 
-@article{mahendran_Enhanced,
-  	title={An enhanced tibia fracture detection tool using image processing and classification fusion techniques in X-ray images},
-  	author={Mahendran, SK and Baboo, S Santhosh},
-  	journal={Global Journal of Computer Science and Technology},
-  	volume={11},
- 	 number={14},
-  	pages={22--28},
-  	year={2011}
+@article{Mahendran_Enhanced,
+	author = {Mahendran, S K and Baboo, S Santhosh},
+	journal = {Global Journal of Computer Science and Technology},
+	number = {14},
+	pages = {22-28},
+	title = {An Enhanced Tibia Fracture Detection Tool Using Image Processing and Classification Fusion Techniques in X-Ray Images},
+	volume = {11},
+	year = {2011}
 }
 
 @INPROCEEDINGS{ComputerAidedBoneFractureDetection, 
